--- a/src/app/store/components/product-list-contents-display/store-product-list-contents-display.component.css
+++ b/src/app/store/components/product-list-contents-display/store-product-list-contents-display.component.css
@@ -5,6 +5,7 @@
  * https://opensource.org/licenses/MIT
  */
 
-h3 {
+:host {
+  display: block;
   text-align: center;
 }
